# akka-edge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASING.md
.cargo/: config
.github/workflows/: fossa.yml  publish-docs.yml  publish.yml  release.yml  test.yml
akka-persistence-rs/: Cargo.toml  README.md
akka-persistence-rs-commitlog/: Cargo.toml  README.md
akka-persistence-rs-commitlog/src/: lib.rs
akka-persistence-rs-filelog/: Cargo.toml  README.md
akka-persistence-rs-filelog/src/: lib.rs
akka-persistence-rs/benches/: README.md  benches.rs
akka-persistence-rs/src/: effect.rs  entity.rs  entity_manager.rs  jdk.rs  lib.rs
akka-projection-rs/: Cargo.toml  README.md
akka-projection-rs-commitlog/: Cargo.toml  README.md
akka-projection-rs-commitlog/src/: lib.rs  offset_store.rs
akka-projection-rs-grpc/: Cargo.toml  README.md  build.rs
akka-projection-rs-grpc/proto/: README.md
akka-projection-rs-grpc/proto/akka/projection/grpc/: event_consumer.proto
akka-projection-rs-grpc/src/: consumer.rs  delayer.rs  lib.rs  producer.rs
akka-projection-rs-storage/: Cargo.toml  README.md
akka-projection-rs-storage/benches/: README.md  benches.rs
akka-projection-rs-storage/src/: lib.rs
akka-projection-rs/benches/: README.md  benches.rs
akka-projection-rs/src/: consumer.rs  consumer_filter.rs  lib.rs  offset_store.rs  volatile_offset_store.rs
docs/: README.md  index.html  release-train-issue-template.md
examples/iot-service/: Cargo.toml  README.md  build.rs
examples/iot-service/backend/: Cargo.toml
examples/iot-service/backend/src/: http_server.rs  main.rs  registration_projection.rs  temperature.rs  temperature_production.rs  udp_server.rs
examples/iot-service/frontend/: Cargo.toml  index.html
examples/iot-service/frontend/src/: app.rs  temperature.rs
examples/iot-service/model/: Cargo.toml
examples/iot-service/model/src/: temperature.rs
examples/iot-service/proto/: RegistrationEvents.proto  TemperatureEvents.proto
examples/iot-service/src/: http_server.rs  main.rs  proto.rs  registration.rs  registration_projection.rs  registration_proto.rs  temperature.rs  temperature_production.rs  udp_server.rs
scripts/: create-release-issue.sh
