[workspace]

members = [
    "akka-persistence-rs",
    "akka-persistence-rs-commitlog",
    "akka-projection-rs",
    "akka-projection-rs-commitlog",
    "akka-projection-rs-grpc",
    "akka-projection-rs-storage",
    "examples/iot-service",
]

[workspace.dependencies]
async-stream = "0.3.3"
async-trait = "0.1.72"
chrono = "0.4.23"
ciborium = "0.2"
clap = "4.0.29"
criterion = "0.4.0"
env_logger = "0.10.0"
git-version = "0.3.5"
hex = "0.4.3"
humantime = "2.1.0"
itoa = "1.0"
log = "0.4.17"
lru = "0.11.0"
postcard = { version = "1.0.6", default-features = false }
rand = "0.8"
scopeguard = "1.1"
serde = "1.0.151"
smol_str = "0.2.0"
streambed = { git = "https://github.com/streambed/streambed-rs.git", rev = "d343171f7ec85cc028674115c8df30150b741ef6" }
streambed-confidant = { git = "https://github.com/streambed/streambed-rs.git", rev = "d343171f7ec85cc028674115c8df30150b741ef6" }
streambed-logged = { git = "https://github.com/streambed/streambed-rs.git", rev = "d343171f7ec85cc028674115c8df30150b741ef6" }
streambed-storage = { git = "https://github.com/streambed/streambed-rs.git", rev = "d343171f7ec85cc028674115c8df30150b741ef6" }
test-log = "0.2.11"
tokio = "1.23.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.4"
warp = "0.3"

[profile.bench-debug]
inherits = "release"
debug = true
