[workspace]
resolver = "2"

members = [
    "akka-persistence-rs",
    "akka-persistence-rs-commitlog",
    "akka-projection-rs",
    "akka-projection-rs-commitlog",
    "akka-projection-rs-grpc",
    "akka-projection-rs-storage",
]

[workspace.package]
version = "0.1.1" # WHEN UPDATING THIS VERSION, UPDATE THE `akka-persistence-rs` VERSIONS BELOW
edition = "2021"
rust-version = "1.70.0"
license-file = "LICENSE"
repository = "https://github.com/lightbend/akka-edge-rs.git"
homepage = "https://doc.akka.io/docs/akka-edge/current/guide.html"

[workspace.dependencies]
async-stream = "0.3.3"
async-trait = "0.1.72"
bytes = "1.4.0"
chrono = "0.4.31"
ciborium = "0.2"
clap = "4.0.29"
criterion = "0.4.0"
env_logger = "0.10.0"
exponential-backoff = "1.2.0"
futures = "0.3.28"
git-version = "0.3.5"
gloo-net = "0.4"
hex = "0.4.3"
humantime = "2.1.0"
itoa = "1.0"
js-sys = "0.3.60"
log = "0.4.17"
lru = "0.11.0"
mqtt-protocol = "0.11.2"
postcard = { version = "1.0.8", default-features = false }
prost = { version = "0.12.0" }
prost-build = { version = "0.12.0" }
prost-types = { version = "0.12.0" }
rand = "0.8"
regex = "1.9.6"
scopeguard = "1.1"
serde = "1.0.151"
serde_json = "1.0.107"
smol_str = "0.2.0"
streambed = { version = "0.9.1" }
streambed-confidant = { version = "0.9.1" }
streambed-logged = { version = "0.9.1" }
streambed-storage = { version = "0.9.1" }
test-log = "0.2.11"
tokio = "1.23.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.4"
tonic = "0.10.0"
tonic-build = "0.10.0"
warp = "0.3"
wasm-logger = "0.2"
web-sys = "0.3"
yew = { version = "0.20" }

# THE VERSIONS HERE SHOULD BE THE SAME AS PER `workspace.package.version`.

akka-persistence-rs = { path = "akka-persistence-rs", version = "0.1.1", registry = "lightbend-akka-rs" }
akka-persistence-rs-commitlog = { path = "akka-persistence-rs-commitlog", version = "0.1.1", registry = "lightbend-akka-rs" }
akka-projection-rs = { path = "akka-projection-rs", version = "0.1.1", registry = "lightbend-akka-rs" }

[profile.bench-debug]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1 # better optimizations
lto = true        # better optimizations
opt-level = 'z'   # Optimize for size
panic = "abort"   # No unwinding or helpful backtrace
strip = true      # No debug symbols etc
