[package]
name = "akka-persistence-rs-commitlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Akka persistence backed by streambed-logged"

[dependencies]
akka-persistence-rs = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
streambed = { workspace = true }
streambed-logged = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }

[features]
# Enable CBOR for serialization
cbor = ["dep:ciborium"]
