[package]
name = "akka-persistence-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
lru = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
tokio-stream = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "benches"
harness = false
