[package]
name = "akka-persistence-rs"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Akka event sourced entities with persistence"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
tokio-stream = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "benches"
harness = false
