[package]
name = "akka-projection-rs-commitlog"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
streambed = { workspace = true }
tokio-stream = { workspace = true }

akka-persistence-rs = { path = "../akka-persistence-rs" }
akka-persistence-rs-commitlog = { path = "../akka-persistence-rs-commitlog" }
akka-projection-rs = { path = "../akka-projection-rs" }
