[package]
name = "akka-projection-rs-commitlog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
streambed = { workspace = true }
tokio-stream = { workspace = true }

akka-persistence-rs = { path = "../akka-persistence-rs" }
akka-persistence-rs-commitlog = { path = "../akka-persistence-rs-commitlog" }
akka-projection-rs = { path = "../akka-projection-rs" }

[dev-dependencies]
env_logger = { workspace = true }
streambed-logged = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
