[package]
name = "akka-projection-rs-commitlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Akka projections with streambed for persistence"

[dependencies]
akka-persistence-rs = { workspace = true }
akka-persistence-rs-commitlog = { workspace = true }
akka-projection-rs = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
streambed = { workspace = true }
streambed-logged = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
streambed-logged = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
