[package]
name = "akka-projection-rs-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
ciborium = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
streambed = { workspace = true }
streambed-storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

akka-persistence-rs = { path = "../akka-persistence-rs" }
akka-projection-rs = { path = "../akka-projection-rs" }

[dev-dependencies]
async-stream = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

akka-persistence-rs-commitlog = { path = "../akka-persistence-rs-commitlog" }

[[bench]]
name = "benches"
harness = false
