[package]
name = "akka-projection-rs-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
ciborium = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
streambed = { workspace = true }
streambed-storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

akka-persistence-rs = { path = "../akka-persistence-rs" }
akka-projection-rs = { path = "../akka-projection-rs" }

[dev-dependencies]
async-stream = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

akka-persistence-rs-commitlog = { path = "../akka-persistence-rs-commitlog" }

[[bench]]
name = "benches"
harness = false
