[package]
name = "akka-projection-rs-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Akka projections with streambed offset storage"

[dependencies]
akka-persistence-rs = { workspace = true }
akka-projection-rs = { workspace = true }
async-trait = { workspace = true }
ciborium = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
streambed = { workspace = true }
streambed-storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
akka-persistence-rs-commitlog = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "benches"
harness = false
