[package]
name = "akka-projection-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
mqtt-protocol = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

akka-persistence-rs = { path = "../akka-persistence-rs" }
