[package]
name = "akka-projection-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Akka event projections"

[dependencies]
akka-persistence-rs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
mqtt-protocol = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
env_logger = { workspace = true }
test-log = { workspace = true }
