[package]
name = "iot-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }
git-version = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, default-features = false, features = [
    "use-std",
] }
prost = { workspace = true }
rand = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true, features = ["serde"] }
streambed = { workspace = true }
streambed-confidant = { workspace = true }
streambed-logged = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tonic = { workspace = true }
warp = { workspace = true }

akka-persistence-rs = { path = "../../akka-persistence-rs" }
akka-persistence-rs-commitlog = { path = "../../akka-persistence-rs-commitlog", features = [
    "cbor",
] }
akka-projection-rs = { path = "../../akka-projection-rs" }
akka-projection-rs-commitlog = { path = "../../akka-projection-rs-commitlog" }
akka-projection-rs-grpc = { path = "../../akka-projection-rs-grpc" }
akka-projection-rs-storage = { path = "../../akka-projection-rs-storage" }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = ["local"]

# Stand the example up with a local source of projections
local = []

# Stand the example up with a remote source of projections using gRPC
grpc = []
