[package]
name = "iot-service-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

akka-persistence-rs = { path = "../../../akka-persistence-rs" }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }
